Excel出力に変更

--- a/make_list_web.html
+++ b/make_list_web.html
@@ -1096,11 +1096,11 @@
                 }
             });
 
-            generatedFiles['Network.csv'] = {
+            generatedFiles['Network.xlsx'] = {
                 data: edgeList,
                 description: '属性付きの生のエッジリスト'
             };
-            log(`完了: Network.csv を作成しました（${edgeList.length} エッジ）`, 'success');
+            log(`完了: Network.xlsx を作成しました（${edgeList.length} エッジ）`, 'success');
 
             // 2. Network with weight.csv の作成
             log('処理中: Network with weightを作成しています...', 'info');
@@ -1143,11 +1143,11 @@
                 return result;
             });
 
-            generatedFiles['Network with weight.csv'] = {
+            generatedFiles['Network with weight.xlsx'] = {
                 data: edgeWeightList,
                 description: 'エッジの重み付きリスト'
             };
-            log(`完了: Network with weight.csv を作成しました（${edgeWeightList.length} ユニークエッジ）`, 'success');
+            log(`完了: Network with weight.xlsx を作成しました（${edgeWeightList.length} ユニークエッジ）`, 'success');
 
             // 3. Node.csv の作成
             log('処理中: Nodeを作成しています...', 'info');
@@ -1192,11 +1192,11 @@
                 return result;
             });
 
-            generatedFiles['Node.csv'] = {
+            generatedFiles['Node.xlsx'] = {
                 data: nodeAttributeList,
                 description: 'ノード属性テーブル'
             };
-            log(`完了: Node.csv を作成しました（${nodeAttributeList.length} ノード）`, 'success');
+            log(`完了: Node.xlsx を作成しました（${nodeAttributeList.length} ノード）`, 'success');
 
             // 4. Node with classification.csv の作成
             log('処理中: Node with classificationを作成しています...', 'info');
@@ -1216,11 +1216,11 @@
 
             const nodeTypeList = Array.from(nodeTypeMap.values());
 
-            generatedFiles['Node with classification.csv'] = {
+            generatedFiles['Node with classification.xlsx'] = {
                 data: nodeTypeList,
                 description: 'ノード分類テーブル'
             };
-            log(`完了: Node with classification.csv を作成しました（${nodeTypeList.length} ノード）`, 'success');
+            log(`完了: Node with classification.xlsx を作成しました（${nodeTypeList.length} ノード）`, 'success');
 
             log('すべての処理が完了しました！', 'success');
 
@@ -1235,10 +1235,10 @@
             // 統計情報の表示
             resultsGrid.innerHTML = '';
             const stats = [
-                { label: 'Network.csv', count: generatedFiles['Network.csv'].data.length, unit: 'エッジ' },
-                { label: 'Network with weight.csv', count: generatedFiles['Network with weight.csv'].data.length, unit: 'ユニークエッジ' },
-                { label: 'Node.csv', count: generatedFiles['Node.csv'].data.length, unit: 'ノード' },
-                { label: 'Node with classification.csv', count: generatedFiles['Node with classification.csv'].data.length, unit: 'ノード' }
+                { label: 'Network.xlsx', count: generatedFiles['Network.xlsx'].data.length, unit: 'エッジ' },
+                { label: 'Network with weight.xlsx', count: generatedFiles['Network with weight.xlsx'].data.length, unit: 'ユニークエッジ' },
+                { label: 'Node.xlsx', count: generatedFiles['Node.xlsx'].data.length, unit: 'ノード' },
+                { label: 'Node with classification.xlsx', count: generatedFiles['Node with classification.xlsx'].data.length, unit: 'ノード' }
             ];
 
             stats.forEach(stat => {
@@ -1258,7 +1258,7 @@
             Object.keys(generatedFiles).forEach(fileName => {
                 const tab = document.createElement('button');
                 tab.className = `preview-tab ${isFirst ? 'active' : ''}`;
-                tab.textContent = fileName.replace('.csv', '');
+                tab.textContent = fileName.replace('.xlsx', '');
                 tab.onclick = () => showPreview(fileName, tab);
                 previewTabs.appendChild(tab);
                 if (isFirst) {
@@ -1338,21 +1338,16 @@
                         continue;
                     }
 
-                    // CSVに変換
+                    // Excelファイルに変換
                     const worksheet = XLSX.utils.json_to_sheet(data);
-                    const csv = XLSX.utils.sheet_to_csv(worksheet);
-
-                    // BOM付きUTF-8
-                    const bom = new Uint8Array([0xEF, 0xBB, 0xBF]);
-                    const csvBytes = new TextEncoder().encode(csv);
-                    const content = new Uint8Array(bom.length + csvBytes.length);
-                    content.set(bom, 0);
-                    content.set(csvBytes, bom.length);
+                    const workbook = XLSX.utils.book_new();
+                    XLSX.utils.book_append_sheet(workbook, worksheet, 'Sheet1');
+                    const excelBuffer = XLSX.write(workbook, { bookType: 'xlsx', type: 'array' });
 
                     // ファイルを作成して書き込み
                     const fileHandle = await dirHandle.getFileHandle(fileName, { create: true });
                     const writable = await fileHandle.createWritable();
-                    await writable.write(content);
+                    await writable.write(excelBuffer);
                     await writable.close();
 
                     savedCount++;
